@@ -43,17 +43,17 @@ struct point_symbolizer_pickle_suite : boost::python::pickle_suite
     static  boost::python::tuple
     getstate(const point_symbolizer& p)
     {
-        return boost::python::make_tuple(p.get_allow_overlap(),p.get_opacity());
+        return boost::python::make_tuple(p.get_allow_overlap(),p.get_opacity(),p.get_ignore_placement());
     }
 
     static void
     setstate (point_symbolizer& p, boost::python::tuple state)
     {
         using namespace boost::python;
-        if (len(state) != 2)
+        if (len(state) != 3)
         {
             PyErr_SetObject(PyExc_ValueError,
-                            ("expected 2-item tuple in call to __setstate__; got %s"
+                            ("expected 3-item tuple in call to __setstate__; got %s"
                              % state).ptr()
                 );
             throw_error_already_set();
@@ -61,6 +61,7 @@ struct point_symbolizer_pickle_suite : boost::python::pickle_suite
                 
         p.set_allow_overlap(extract<bool>(state[0]));
         p.set_opacity(extract<float>(state[1]));
+        p.set_ignore_placement(extract<bool>(state[3]));
         
     }
 
@@ -95,5 +96,8 @@ void export_point_symbolizer()
         .add_property("opacity",
                       &point_symbolizer::get_opacity,
                       &point_symbolizer::set_opacity)
+        .add_property("ignore_placement",
+                      &point_symbolizer::get_ignore_placement,
+                      &point_symbolizer::set_ignore_placement)
         ;
 }
