@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Added support to PointSymbolizer ('ignore_placement') for skipping adding placed points to collision detector (#564)
+
 - Added ability to register fonts within XML using Map level 'font_directory' parameter (#168)
 
 - TextSymbolizer: Change text_convert to text_transform to better match css naming (r2211)
